corpus/method_declaration.txt
==================
Method Declaration
==================

#DECLARE($tst1: Text; $tst2: Integer; $tst3 : cs.MyClass) -> $ret : Blob

---
(source_file
    (method_declaration
        params: (local_variable (identifier))
        params: (type)
        params: (local_variable (identifier))
        params: (type)
        params: (local_variable (identifier))
        params: (type)
        (local_variable (identifier))
        (type)))
